# yastwai

./: .gitignore  AGENTS.md  CLAUDE.md  COMMIT_GUIDELINES.md  CONTRIBUTING.md  Cargo.toml  GIT_WORKFLOW.md  LICENSE  README-PR.md  README.md  branch.mdc  clippy.toml  conf.example.json  create-commit.sh  create-pr.sh  run-clippy.sh  test.srt  yastwai.md
.claude/: settings.json
.cursor/rules/: branch.mdc  commit.mdc  cursor.mdc  pr.mdc  project.mdc  rust.mdc  yastai.mdc  yastwai.mdc
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  branch-protection.yml  dependabot.yml  pull_request_template.md
.github/workflows/: pr-status-check.yml  release.yml  rust-build.yml  rust-clippy.yml  rust-tests.yml
agents/: core.md  rust.md  skills-registry.md
agents/reference/: agentic-handbook-full.md  agentic-patterns-full.md  good-spec-full.md  ralph-wiggum-full.md
agents/research/: 01-good-spec.md  02-agentic-handbook.md  03-agentic-patterns.md  04-ralph-wiggum.md
benches/: quality_bench.rs  translation_bench.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  PROJECT_AUDIT_PLAN.md  TRANSLATION_OVERHAUL_PLAN.md  TROUBLESHOOTING.md
docs/agentrules/: ai_agent_guide.md  branch_mdc.txt  commit_mdc.txt  cursor.mdc  cursor_mdc.txt  pr_mdc.txt  project.md  project_mdc.txt  rust_mdc.txt  system.md
docs/context/: project-structure.md  (+1 more)
plans/: 20260121-translation-quality-speed.md  TEMPLATE.md
script/: create-commit.sh  create-pr.sh
scripts/: ai-branch-helper.sh  ai-branch.cmd  ai-branch.ps1  ai-branch.sh  ai-clippy-helper.sh  ai-clippy.cmd  ai-clippy.ps1  ai-clippy.sh  ai-commit-helper.sh  ai-commit-simple.sh  ai-commit.cmd  ai-commit.ps1  ai-commit.sh  ai-cursor-model.cmd  ai-cursor-model.ps1  ai-cursor-model.sh  ai-cursor-model.sh.bak  ai-pr-helper.sh  ai-pr.cmd  ai-pr.ps1  ai-pr.sh  ai-pr.sh.bak  ai-protect-main.cmd  ai-protect-main.ps1  ai-protect-main.sh  ai-readme.cmd  ai-readme.ps1  ai-readme.sh  ai-readme.sh.bak  ai-rules-symlinks.cmd  ai-rules-symlinks.ps1  ai-rules-symlinks.sh  ai-update-main.cmd  ai-update-main.ps1  ai-update-main.sh  branch-check.sh  create-commit.sh  create-pr.sh
src/: app_config.rs  app_controller.rs  errors.rs  file_utils.rs  language_utils.rs  lib.rs  main.rs  subtitle_processor.rs  translation_service.rs
templates/: claude-templates.md
tests/: main.rs  script_tests.rs
(+90 files in other folders)
