[package]
name = "yastwai"
version = "0.1.0"
edition = "2024"
readme = "README.md"
rust-version = "1.85.0"
license = "MIT"

[dependencies]
# Core utilities
tokio = { version = "1.44.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
anyhow = "1.0"
log = { version = "0.4", features = ["std"] }
once_cell = "1.20"
async-trait = "0.1.77"

# Serialization/Deserialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# HTTP and API client
reqwest = { version = "0.11.22", features = ["json"] }
url = "2.5"

# File processing
walkdir = "2.5"
regex = "1.10.2"
bytes = "1.10"
chrono = "0.4"
tempfile = "3.10"

# CLI interface and progress
indicatif = "0.17.8"
clap = { version = "4.4", features = ["derive", "env", "string"] }
clap_complete = "4.4"

# Random for testing
rand = "0.9"

# Additional dependencies
isolang = { version = "2.4.0", features = ["local_names", "english_names"] }
thiserror = "1.0.50" 
parking_lot = "0.12.3"

# Database and persistence
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }

# Directory management
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4.3"
env_logger = "0.10"
